--- a/templates/index.html
+++ b/templates/index.html
@@ -24,7 +24,9 @@
                 <input type="url" id="url" name="url" autocomplete="off">
                 <br>
 
-                <p>Select your vector type:</p>
+                <p>Your Vector Type: {{ word_vector_method }}</p>
+
+<!--                 <p>Select your vector type:</p>
                 <label for="w2v">Word2Vec</label>
                 <input type="radio" id="w2v" name="model_type" value="w2v">
                 <br>
@@ -35,7 +37,7 @@
 
                 <label for="lda">LDA</label>
                 <input type="radio" id="lda" name="model_type" value="lda">
-                <br>
+                <br> -->
 
                 <input class="submit" type="submit" value="Submit">
             </section>
